# maffe

./: .env  .gitignore  LICENSE  README.md  docker_setup.sh  meson.build  meson_options.txt  pyproject.toml
bindings/python/: module.cpp
cmake/highs-meson-package/: highs-config.cmake
include/: maffe.hpp
lists/: pace26_all.lst  pace26_lower_pub_v2.lst  pace26_tiny.lst
scripts/: build_competition.sh
src/branchandprice/highs/: root_lp.cpp  root_lp.hpp
src/branchandprice/master/: root_master.cpp  root_master.hpp  set_packing_heuristic.cpp  set_packing_heuristic.hpp  set_packing_scip.cpp  set_packing_scip.hpp
src/branchandprice/pricer/: lagrangian.cpp  lagrangian.hpp
src/branchandprice/scip/: branch_and_price.cpp  branch_and_price.hpp
src/cli/: main.cpp
src/compact/: compact_solver.cpp  compact_solver.hpp  lca.hpp
src/heuristic/: colgen_heuristic.cpp  colgen_heuristic.hpp  node_coverage.cpp  node_coverage.hpp
src/maffe/: common.hpp  maffe.cpp
src/newick/: newick.cpp  newick.hpp
src/reductions/: chain_rule.cpp  cherry_picking.cpp  cluster_reduction.cpp  cut_aware_cluster.cpp  five_three_reduction.cpp  orchestrator.cpp  reductions.hpp  three_two_reduction.cpp
src/reductions/detail/: binary_tree_view.hpp  common_cluster_forest.hpp  cut_aware_cluster.hpp  related_side.hpp
src/util/: constants.hpp  hash.hpp  log.hpp  partition_ops.hpp  scip_error_log.hpp  tree_ops.hpp  union_find.hpp
subprojects/: conicbundle.wrap  highs.wrap  scipoptsuite.wrap
subprojects/packagefiles/conicbundle/: meson.build
subprojects/packagefiles/highs/: remove-unused-hipo-includes.diff
