project(
  'conicbundle',
  'cpp',
  meson_version: '>= 1.3.0',
  default_options: ['cpp_std=c++11', 'warning_level=0'],
)

config = configuration_data()
config.set('CONICBUNDLE_DEBUG', get_option('b_ndebug') == 'false' ? 1 : 0)
configure_file(
  output: 'CBconfig.hxx',
  configuration: config,
)

cpp = meson.get_compiler('cpp')
cb_include_dirs = include_directories('.', 'include', 'CBsources', 'Matrix', 'Tools')

cb_sources = files(
  'Matrix/memarray.cxx',
  'CBsources/CBout.cxx',
  'CBsources/MatrixCBSolver.cxx',
  'CBsources/CBSolver.cxx',
  'CBsources/CB_CSolver.cxx',
  'CBsources/CFunction.cxx',
  'CBsources/BundleSolver.cxx',
  'CBsources/BundleModel.cxx',
  'CBsources/BundleWeight.cxx',
  'CBsources/BundleHKWeight.cxx',
  'CBsources/BundleRQBWeight.cxx',
  'CBsources/BundleTerminator.cxx',
  'CBsources/Groundset.cxx',
  'CBsources/GroundsetModification.cxx',
  'CBsources/UnconstrainedGroundset.cxx',
  'CBsources/LPGroundset.cxx',
  'CBsources/LPGroundsetModification.cxx',
  'CBsources/Minorant.cxx',
  'CBsources/MinorantUseData.cxx',
  'CBsources/MinorantPointer.cxx',
  'CBsources/BundleData.cxx',
  'CBsources/SumBlockModel.cxx',
  'CBsources/SumModel.cxx',
  'CBsources/SumModelParameters.cxx',
  'CBsources/SumBundle.cxx',
  'CBsources/SumBundleHandler.cxx',
  'CBsources/SumBundleParametersObject.cxx',
  'CBsources/SumBundleParameters.cxx',
  'CBsources/AffineFunctionTransformation.cxx',
  'CBsources/AFTModification.cxx',
  'CBsources/AFTData.cxx',
  'CBsources/AFTModel.cxx',
  'CBsources/ConeModel.cxx',
  'CBsources/NNCModel.cxx',
  'CBsources/NNCData.cxx',
  'CBsources/NNCBoxSupportFunction.cxx',
  'CBsources/NNCBoxSupportModification.cxx',
  'CBsources/NNCModelParameters.cxx',
  'CBsources/BoxData.cxx',
  'CBsources/BoxModel.cxx',
  'CBsources/BoxModelParameters.cxx',
  'CBsources/BoxOracle.cxx',
  'CBsources/SOCData.cxx',
  'CBsources/SOCModel.cxx',
  'CBsources/SOCModelParameters.cxx',
  'CBsources/SOCSupportFunction.cxx',
  'CBsources/SOCSupportModification.cxx',
  'CBsources/PSCOracle.cxx',
  'CBsources/PSCData.cxx',
  'CBsources/PSCModel.cxx',
  'CBsources/PSCModelParameters.cxx',
  'CBsources/PSCVariableMetricSelection.cxx',
  'CBsources/PSCAffineFunction.cxx',
  'CBsources/PSCAffineModification.cxx',
  'CBsources/PSCPrimal.cxx',
  'CBsources/LanczMaxEig.cxx',
  'CBsources/Coeffmat.cxx',
  'CBsources/SparseCoeffmatMatrix.cxx',
  'CBsources/Bigmatrix.cxx',
  'CBsources/ModificationBase.cxx',
  'CBsources/Modification.cxx',
  'CBsources/ModificationTreeData.cxx',
  'CBsources/VariableMetric.cxx',
  'CBsources/VariableMetricSVDSelection.cxx',
  'CBsources/BundleProxObject.cxx',
  'CBsources/BundleIdProx.cxx',
  'CBsources/BundleDiagonalTrustRegionProx.cxx',
  'CBsources/BundleDLRTrustRegionProx.cxx',
  'CBsources/BundleLowRankTrustRegionProx.cxx',
  'CBsources/BundleDenseTrustRegionProx.cxx',
  'CBsources/UQPModelBlockObject.cxx',
  'CBsources/UQPModelBlock.cxx',
  'CBsources/UQPSumModelBlock.cxx',
  'CBsources/UQPConeModelBlock.cxx',
  'CBsources/UQPSolver.cxx',
  'CBsources/QPModelDataObject.cxx',
  'CBsources/QPModelBlockObject.cxx',
  'CBsources/QPSolverObject.cxx',
  'CBsources/QPSolver.cxx',
  'CBsources/QPModelBlock.cxx',
  'CBsources/QPSumModelBlock.cxx',
  'CBsources/QPConeModelBlock.cxx',
  'CBsources/InteriorPointBlock.cxx',
  'CBsources/InteriorPointBundleBlock.cxx',
  'CBsources/NNCIPBlock.cxx',
  'CBsources/SOCIPBlock.cxx',
  'CBsources/PSCIPBlock.cxx',
  'CBsources/NNCIPBundleBlock.cxx',
  'CBsources/SOCIPBundleBlock.cxx',
  'CBsources/PSCIPBundleBlock.cxx',
  'CBsources/BoxIPBundleBlock.cxx',
  'CBsources/SOCIPProxBlock.cxx',
  'CBsources/QPKKTSolverObject.cxx',
  'CBsources/QPDirectKKTSolver.cxx',
  'CBsources/QPSolverParameters.cxx',
  'CBsources/QPSolverBasicStructures.cxx',
  'CBsources/QPKKTPrecondObject.cxx',
  'CBsources/QPIterativeKKTSolver.cxx',
  'CBsources/QPKKTSubspaceHPrecond.cxx',
  'CBsources/QPIterativeKKTHASolver.cxx',
  'CBsources/QPIterativeKKTHAeqSolver.cxx',
  'CBsources/QPKKTSolverComparison.cxx',
  'Matrix/indexmat.cxx',
  'Matrix/matrix.cxx',
  'Matrix/symmat.cxx',
  'Matrix/eigval.cxx',
  'Matrix/ldl.cxx',
  'Matrix/chol.cxx',
  'Matrix/aasen.cxx',
  'Matrix/qr.cxx',
  'Matrix/trisolve.cxx',
  'Matrix/nnls.cxx',
  'Matrix/sparssym.cxx',
  'Matrix/sparsmat.cxx',
  'Matrix/lanczpol.cxx',
  'Matrix/IterativeSystemObject.cxx',
  'Matrix/psqmr.cxx',
  'Matrix/pcg.cxx',
  'Matrix/minres.cxx',
)

cb_lib = static_library(
  'cb',
  cb_sources,
  include_directories: cb_include_dirs,
  dependencies: cpp.find_library('m', required: false),
  override_options: ['warning_level=0'],
  install: false,
)

conicbundle_dep = declare_dependency(
  link_with: cb_lib,
  include_directories: cb_include_dirs,
)
